--- a/build.yaml
+++ b/build.yaml
@@ -2,15 +2,15 @@ builders:
   abi_generator:
     build_extensions:
       ".abi.json": [".g.dart"]
-    import: "package:web3dart_builders/builders.dart"
+    import: "package:web3dart_cubealgos_builders/builders.dart"
     builder_factories: ["abiGenerator"]
     build_to: source
     auto_apply: dependents
-    applies_builders: [ ':delete_abi_source' ]
+    applies_builders: [":delete_abi_source"]
 
 post_process_builders:
   delete_abi_source:
-    import: "package:web3dart_builders/builders.dart"
+    import: "package:web3dart_cubealgos_builders/builders.dart"
     input_extensions: [".abi.json"]
     builder_factory: "deleteSource"
     defaults:
