--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
-name: web3dart_builders
-description: Extension of the web3dart package that includes the dart contract generator from abi.
-version: 0.1.2
-repository: https://github.com/inveker/web3dart_builders
-homepage: https://github.com/inveker/web3dart_builders
+name: web3dart_cubealgos_builders
+description: Extension of the web3dart_cubealgos package that includes the dart contract generator from abi.
+version: 1.0.0
+repository: https://github.com/cubealgos/web3dart_cubealgos_builders
+homepage: https://github.com/cubealgos/web3dart_cubealgos_builders
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   build: ^2.3.1
   code_builder: ^4.4.0
-  web3dart: ^2.6.1
+  web3dart_cubealgos: ^1.0.0
   built_collection: ^5.1.1
   path: ^1.8.3
   dart_style: ^2.2.4
